Fix padding percent for spacing

--- a/css.css
+++ b/css.css
@@ -71,7 +71,7 @@ body {
 	height: 0;
 	position: relative;
 	background-image: url("images/main.png");
-	padding-top: 65%;
+	padding-top: 50%;
 }
 #back {
 	position: absolute;
